src/regression/parse_pool/progtest6.sfp.out

sfc in program: parse_pool/progtest6.sfp
syntax error at 2 at line:
configuration hello { nothing start } 
                              ^
