src/regression/parse_pool/progtest6.sfp
# Testing erroneous program definition (invalid network)
configuration hello { nothing start } 
start hello

